--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Контакты</title>
+    <title>Главная</title>
 </head>
 <body>
     <div class="container">
-        <h1>Контакты</h1>
-        <p>Свяжитесь с нами по телефону: +123456789 или по электронной почте: info@shop.com</p>
+        <h1>Главная страница</h1>
+        <p>Добро пожаловать на наш сайт интернет-магазина!</p>
     </div>
 </body>
 </html>
